--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
+    "lottie-web": "^5.12.2",
     "lucide-react": "^0.460.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
