--- a/package.json
+++ b/package.json
@@ -11,23 +11,26 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-context-menu": "^2.2.1",
-    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.1",
-    "@radix-ui/react-tooltip": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.6",
+    "@tanstack/react-query": "^5.62.15",
     "@tanstack/react-table": "^8.19.3",
     "@types/uuid": "^10.0.0",
     "axios": "^1.7.2",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
@@ -35,7 +38,7 @@
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lottie-web": "^5.12.2",
-    "lucide-react": "^0.460.0",
+    "lucide-react": "^0.469.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "next-intl": "^3.17.1",
@@ -50,6 +53,7 @@
     "zustand": "^5.0.1"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.62.15",
     "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
