--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
+    "framer-motion": "^11.18.1",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lottie-web": "^5.12.2",
@@ -46,6 +47,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-textarea-autosize": "^8.5.7",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
