--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-hot-toast": "^2.5.1",
     "react-textarea-autosize": "^8.5.7",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.5",
