--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
+    "dayjs-timezone-iana-plugin": "^0.1.0",
     "framer-motion": "^11.18.1",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
