--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "uuidv4": "^6.2.13",
+    "wavesurfer.js": "^7.9.1",
     "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
